--- a/index.md.html
+++ b/index.md.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Roberts website</title>
     <link rel="stylesheet" href="style.css">
-  
+
   </head>
   <body>
 
@@ -17,7 +17,7 @@
       <div class="container">
         <ul>
 
-          <li><a href="index.html">Home</a></li>
+          <li><a href="index.md.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="service.html">Services</a></li>
           <li><a href="contact.html">Contact</a></li>
