--- a/service.html
+++ b/service.html
@@ -16,7 +16,7 @@
       <div class="container">
         <ul>
 
-          <li><a href="index.html">Home</a></li>
+          <li><a href="index.md.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="service.html">Services</a></li>
           <li><a href="contact.html">Contact</a></li>
