--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Roberts website</title>
     <link rel="stylesheet" href="style.css">
+
   </head>
   <body>
 
@@ -37,11 +38,11 @@
     </section>
 
       <section id="main" >
-        <h1>Service's</h1>
-        <p>I dont have any services at the moment,but one day I would like to make websites for people.</p>
+        <h1>Welcome</h1>
+        <p>I just started this website its going to be about my life..</p>
       </section>
-      <aside id="sideba" >
-        <p>.</p>
+      <aside id="sidebar" >
+        <p>I just started learning coding..</p>
       </aside>
     </div>
 
